testsuite/tests/typecheck/should_fail/all.T

test('tcfail001', normal, compile_fail, [''])
test('tcfail002', normal, compile_fail, [''])
test('tcfail003', normal, compile_fail, ['-ferror-spans'])
test('tcfail004', normal, compile_fail, ['-ferror-spans'])
test('tcfail005', normal, compile_fail, [''])
test('tcfail006', normal, compile_fail, [''])
test('tcfail007', normal, compile_fail, [''])
test('tcfail008', normal, compile_fail, [''])
test('tcfail009', normal, compile_fail, [''])
test('tcfail010', normal, compile_fail, [''])
test('tcfail011', normal, compile_fail, ['-fwarn-type-overflows'])
test('tcfail012', normal, compile_fail, [''])
test('tcfail013', normal, compile_fail, [''])
test('tcfail014', normal, compile_fail, ['-ferror-spans'])
test('tcfail015', normal, compile_fail, ['-ferror-spans'])
test('tcfail016', normal, compile_fail, [''])
